# opentrons_custom_serial

./: .gitignore  CLAUDE.md  custom_serial_module.patch  install.sh  pyproject.toml
examples/: arduino_example.ino  example_protocol.py  pico_micropython_example.py
ot_custom_serial_module/: __init__.py  module.py  serial_handler.py  simulator.py
